--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://mob.tscn")
-current_scene="res://mob.tscn"
+open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://mob.tscn", "res://player.tscn")
+current_scene="res://SurvivorScene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -45,7 +45,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://mob.gd", "res://characters/slime/slime.gd", "res://survivor_scene.gd"]
-selected_script="res://mob.gd"
+selected_script="res://survivor_scene.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
