--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://mob.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Bullet.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://mob.tscn", "res://player.tscn")
+open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://mob.tscn", "res://player.tscn", "res://Bullet.tscn", "res://gun.tscn")
 current_scene="res://SurvivorScene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://mob.gd", "res://characters/slime/slime.gd", "res://survivor_scene.gd"]
+open_scripts=["res://bullet.gd", "res://gun.gd", "res://mob.gd", "res://player.gd", "res://survivor_scene.gd"]
 selected_script="res://survivor_scene.gd"
 open_help=[]
 script_split_offset=400
