--- a/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
+++ b/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 60,
-"scroll_position": 34.0,
+"row": 85,
+"scroll_position": 73.3401,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,53 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 24,
+"row": 2,
+"scroll_position": 30.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 13.0,
+"row": 32,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://gun.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://bullet.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 53,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 19,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
