Coin collection complete

--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Bullet.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://mob.tscn", "res://player.tscn", "res://Bullet.tscn", "res://gun.tscn")
-current_scene="res://SurvivorScene.tscn"
+open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://coin.tscn", "res://Bullet.tscn", "res://player.tscn", "res://mob.tscn")
+current_scene="res://coin.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -44,8 +44,8 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://gun.gd", "res://mob.gd", "res://player.gd", "res://survivor_scene.gd"]
-selected_script="res://survivor_scene.gd"
+open_scripts=["res://bullet.gd", "res://coin.gd", "res://gun.gd", "res://mob.gd", "res://player.gd", "res://survivor_scene.gd"]
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
