--- a/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
+++ b/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 74,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 85,
-"scroll_position": 73.3401,
+"row": 88,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 71,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 24,
-"row": 2,
-"scroll_position": 30.0,
+"h_scroll_position": 0,
+"row": 45,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 0.0,
+"row": 13,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,12 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 26,
 "scroll_position": 14.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 22,
+"selection_to_column": 36,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -75,9 +79,27 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 53,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 19,
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://coin.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(6),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
 "row": 8,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 8,
+"selection_to_column": 26,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
