--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -33,7 +33,7 @@ current_scene="res://coin.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -45,7 +45,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://bullet.gd", "res://coin.gd", "res://gun.gd", "res://mob.gd", "res://player.gd", "res://survivor_scene.gd"]
-selected_script="res://player.gd"
+selected_script="res://coin.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
