--- a/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
+++ b/First Godot Project/Project/.godot/editor/script_editor_cache.cfg
@@ -90,16 +90,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(6),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 6,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 8,
-"selection_to_column": 26,
-"selection_to_line": 8,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
