--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=1
 [EditorWindow]
 
 screen=0
-mode="windowed"
+mode="fullscreen"
 size=Vector2i(2880, 1676)
 position=Vector2i(0, 0)
 
