--- a/First Godot Project/Project/.godot/editor/editor_layout.cfg
+++ b/First Godot Project/Project/.godot/editor/editor_layout.cfg
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SurvivorScene.tscn", "res://coin.tscn", "res://Bullet.tscn", "res://player.tscn", "res://mob.tscn")
-current_scene="res://SurvivorScene.tscn"
+current_scene="res://player.tscn"
 center_split_offset=-654
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -45,7 +45,7 @@ position=Vector2i(0, 0)
 [ScriptEditor]
 
 open_scripts=["res://bullet.gd", "res://coin.gd", "res://gun.gd", "res://mob.gd", "res://player.gd", "res://survivor_scene.gd"]
-selected_script="res://survivor_scene.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
